--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: #F8F9FB;
+}
+.button-color{
+    background-color: #0089ba;
+}
